updated neuroglancer .... fix git messup

--- a/neuroglancer/src/neuroglancer/annotation/user_layer.css
+++ b/neuroglancer/src/neuroglancer/annotation/user_layer.css
@@ -32,7 +32,7 @@
 
 .neuroglancer-annotation-shader-property {
   white-space: pre;
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-size: medium;
 }
 
