--- a/neuroglancer/src/neuroglancer/help/input_event_bindings.css
+++ b/neuroglancer/src/neuroglancer/help/input_event_bindings.css
@@ -45,7 +45,7 @@
 }
 
 .neuroglancer-help-scroll-container .dt {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-weight: bold;
   color: yellow;
 }
