--- a/neuroglancer/src/neuroglancer/widget/display_dimensions_widget.css
+++ b/neuroglancer/src/neuroglancer/widget/display_dimensions_widget.css
@@ -40,7 +40,7 @@
 
 .neuroglancer-display-dimensions-widget input,
 .neuroglancer-display-dimensions-widget {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   color: white;
 }
 
