--- a/neuroglancer/src/neuroglancer/single_mesh_user_layer.css
+++ b/neuroglancer/src/neuroglancer/single_mesh_user_layer.css
@@ -48,7 +48,7 @@
 }
 
 .neuroglancer-single-mesh-attribute {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   display: contents;
 }
 
