--- a/neuroglancer/src/neuroglancer/ui/annotations.css
+++ b/neuroglancer/src/neuroglancer/ui/annotations.css
@@ -59,7 +59,7 @@
 }
 
 .neuroglancer-annotation-coordinate {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   text-align: right;
 }
 
@@ -173,7 +173,7 @@ div.neuroglancer-annotation-details-description {
 }
 
 .neuroglancer-annotations-view-dimension {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   text-align: right;
 }
 
@@ -202,7 +202,7 @@ div.neuroglancer-annotation-details-description {
 .neuroglancer-selected-annotation-details-position-grid {
   display: grid;
   grid-auto-rows: auto;
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-size: medium;
   grid-auto-flow: dense;
 }
@@ -258,7 +258,7 @@ div.neuroglancer-annotation-details-description {
 
 .neuroglancer-annotation-property-value {
   text-align: right;
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-size: medium;
   flex: 1;
 }
