--- a/neuroglancer/src/neuroglancer/ui/layer_bar.css
+++ b/neuroglancer/src/neuroglancer/ui/layer_bar.css
@@ -83,7 +83,7 @@
 
 .neuroglancer-layer-panel[data-show-hover-values="true"] .neuroglancer-layer-item-value {
   display: inline-block;
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-size: medium;
   max-width: 50ch;
   margin-left: 1ch;
