--- a/neuroglancer/src/neuroglancer/widget/invlerp.css
+++ b/neuroglancer/src/neuroglancer/widget/invlerp.css
@@ -33,7 +33,7 @@
   box-shadow: none;
   border: 0;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-size: medium;
 }
 
