--- a/neuroglancer/src/neuroglancer/widget/multiline_autocomplete.css
+++ b/neuroglancer/src/neuroglancer/widget/multiline_autocomplete.css
@@ -22,7 +22,7 @@
 }
 
 .neuroglancer-multiline-autocomplete-hint, .neuroglancer-multiline-autocomplete-input {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   color: #fff;
   word-wrap: break-word;
 }
@@ -41,7 +41,7 @@
 }
 
 .neuroglancer-multiline-autocomplete-hint, .neuroglancer-multiline-autocomplete-input, .neuroglancer-multiline-autocomplete-completion {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace;
   font-size: medium;
 }
 
