right click on ball displays mesh, more elegant solution

--- a/neuroglancer/src/neuroglancer/NH_style.css
+++ b/neuroglancer/src/neuroglancer/NH_style.css
@@ -264,3 +264,8 @@ html, body, #neuroglancer-container{
   z-index:1000;
   position:absolute;
 }
+#imp-color-by-div {
+  color:black;
+  align-items: center;
+
+}
